# photoprism-google-photos-sync

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-build.yml
docs/: architecture.md  authentication.md  deployment.md  self-hosted-runner.md
downloader/: __init__.py  auth.py  config.py  main.py
downloader/data/: album_whitelist.csv
resizer/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_alerts.py  test_downloader.py  test_downloader_auth.py  test_resizer.py  test_run.py  test_token_manager.py  test_uploader.py
uploader/: __init__.py  auth.py  config.py  main.py  token_manager.py
utils/: __init__.py  alerts.py
